feat(ranking): remove no related docs

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script type="module">
       import init, { ranking_docs } from "./pkg/search_rs.js";
       init().then(() => {
-        let result = ranking_docs("he");
+        let result = ranking_docs("a");
         console.log(result);
       });
     </script>
